--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 nav {
-    background-color: darkblue;
+    background-color: rgba(48, 139, 65, 0.952);
     padding: 10px;
 }
 
@@ -10,10 +10,10 @@ nav a {
 }
 
 h1 {
-    color: darkblue;
+    color: rgb(5, 107, 47);
 }
 
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid black;
@@ -22,5 +22,32 @@ img {
 }
 
 p {
-    padding: 10px;
+    padding: 0;
 }
+
+main {
+    max-width: 800px; 
+}
+
+aside {
+    width: 500px;
+    margin: 5px;
+    border: 1px solid green;
+    padding: 5px; 
+    background-color: rgba(37, 153, 76, 0.336);
+    color: #333;
+    text-align: center;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+footer {
+    margin-top: 20px;
+    border: 1px solid #000;
+    text-align: center;
+}
+
+
