--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,7 +46,7 @@ aside img {
 
 footer {
     margin-top: 20px;
-    border: 1px solid #000;
+    border-top: 1px solid #000;
     text-align: center;
 }
 
