--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --color: rgb(5, 107, 47);
+    --color: rgb(12, 131, 62);
     --text-align: center;
 }
 
@@ -9,20 +9,33 @@
     box-sizing: border-box;
 }
 
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
 
 nav {
     background-color: var(--color);
-    padding: 10px;
+    padding: 2rem;
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: 5px;
+    text-decoration: none;
 }
 
 h1 {
     color: var(--color);
+    margin: 10px 0 50px 20px;
+    padding: 10px;
+    border-bottom: 2px solid var(--color);
+    
+
 }
 
 main img {
@@ -30,24 +43,28 @@ main img {
     width: 150px;
     height: auto;
     border: 1px solid black;
+    margin: 7px;
     padding: 2px;
-    box-shadow: 0 0 30px gray;
+    box-shadow: 0 0 10px gray;
 }
 
 p {
-    padding: 0;
+    padding: 1px;
     margin: 1rem;
     margin-bottom: 100px;
 }
 
 main {
-    max-width: 800px; 
+    max-width: 800px;
+    grid-column: 2; 
 }
 
 aside {
     width: 500px;
     text-align: var(--text-align);
     position: relative;
+    grid-column: 1;
+    grid-row: 1;
 }
 
 
@@ -65,7 +82,6 @@ aside h2 {
 footer {
     margin-top: 20px;
     border-top: 1px solid #000;
-    text-align: var(--text-align);
 }
 
 /* Class Selectors */
@@ -76,4 +92,11 @@ footer {
     padding: 1rem; 
     background-color: rgba(43, 133, 43, 0.267);
     color: #333;
+}
+
+.grid {
+    display: grid; 
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+
 }
