--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -7,37 +7,43 @@
     --text-font: "Roboto", sans-serif; 
 }
 
-nav a{
+header {
+    margin: 10px auto;
+    display: grid;
+    grid-template-columns: 300px 600px ;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--secondary-color);
+}
+
+header img { 
+    display: flex;
+    margin: 15px 0 15px 60px;
+    border-radius: 40%;
+
+}
+.navigation {
+    list-style: none;
+    display: flex;
+}
+
+.navigation a{
     text-decoration: none;
+    margin: 35px;
+    color: var(--accent2-color);
+}
+
+.navigation a:hover {
+    color: rgb(90, 90, 238);
+    font-weight: 700;
+    text-decoration: underline;
 }
 
 main {
     font-family: var(--heading-font);
-    color: var(--primary-color);
-    max-width: 1000px;
-    
+    color: var(--primary-color);                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
 }
 
-p {
-    font-family: var(--text-font);
-    color: black;
-}
-
-section img {
-    display: block;
-    margin: 1rem;
-}
-
-.sociallinks {
-    text-decoration: none;
-}
-
-.sociallinks img {
-    width: 50px;
-    height: auto;
-    padding: 1rem;
-    margin: 1rem;
-}
 .hero {
     position: relative;
 }
@@ -69,3 +75,80 @@ section img {
     padding: 1rem;
 }
 
+p {
+    font-family: var(--text-font);
+    color: black;
+}
+
+.history {
+    margin: 20px auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows:  10px 1fr;
+    align-items: center;
+}
+
+.history h2 {
+    grid-column: 1/4;
+    align-items: center;
+    margin: 20px auto;
+}
+
+.history p {
+    grid-column: 1/4;
+    grid-row: 2/3;
+    align-items: center;
+    justify-content: center;
+}
+
+.adventure {
+    margin: 20px auto;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 10px 1fr;
+    align-items: center;
+}
+
+.adventure h2{
+    grid-column: 1/6;
+    align-items: center;
+    margin: 20px auto;
+}
+
+.adventure figure{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.adventure img {
+    width: 200px;
+    height: 120px; 
+}
+
+footer {
+    margin-top: 80px;
+    display: grid;
+    grid-template-columns: 1fr 200px ;
+    align-items: flex-end;
+    background-color: var(--accent1-color);
+}
+
+footer nav {
+    display: flex;
+}
+ footer p {
+    text-align: center;
+ }
+
+.sociallinks {
+    text-decoration: none;
+    justify-content: flex-end;
+}
+
+
+.sociallinks img, a {
+    width: 40px;
+    height: auto;
+    margin: 0 40px 0 10px;
+}
